<resources>
    <string name="app_name">IntelligentDoor</string>

    <!-- 主页面 -->
    <string name="scanning">正在扫描</string>
    <string name="message_datatime">留言时间：</string>
    <string name="up">上一条</string>
    <string name="down">下一条</string>
    <string name="previous_day">前一天</string>
    <string name="next_day">后一天</string>
    <string name="play">播放/删除</string>
    <string name="setting">设置</string>
    <string name="guest_recording">访客留言</string>
    <string name="user_manage">用户管理</string>
    <string name="user_manage_language">系统语言</string>
    <string name="user_manage_fontsize">系统字体</string>
    <string name="user_manage_theme">系统主题</string>
    <string name="user_manage_password">管理密码</string>
    <string name="change_pwd">设置密码</string>
    <string name="add_user">添加用户</string>
    <string name="delete">删除</string>
    <string name="duration">时长：</string>
    <string name="second">秒</string>
    <string name="back">回退</string>

    <string name="dialog_title">提示</string>
    <string name="dialog_yes">是</string>
    <string name="dialog_no">否</string>
    <string name="title_delete">是否要删除本条留言？</string>
    <string name="title_pas1">默认密码为</string>
    <string name="title_pas2">,是否修改?</string>
    <string name="title_enter_pwd">请输入密码</string>
    <string name="title_enter_admin_pwd">请输入管理员密码</string>
    <string name="title_pwd">输入密码</string>
    <string name="title_pasisno">密码错误</string>
    <string name="title_see_screen">请目视屏幕</string>
    <string name="title_pwd_error">密码错误，请重新输入</string>

    <!--用户设置界面-->
    <string name="user_head">头像</string>
    <string name="user_name">用户名</string>
    <string name="user_passage">密码</string>
    <string name="user_difficulty">操作难度</string>
    <string name="user_language">语言</string>
    <string name="user_briefness">简单</string>
    <string name="user_medium">中等</string>
    <string name="user_normal">高级</string>
    <string name="user_setting">设置</string>
    <string name="difficulty">请选择操作难度:</string>
    <string name="oldpassage">请输入旧密码</string>
    <string name="newpassage">请输入新密码</string>
    <string name="newpassagetoo">请再次输入新密码</string>
    <string name="addpassage">请设置密码</string>
    <string name="addpassagetoo">请再次输入密码</string>
    <string name="ok">确定</string>
    <string name="off">取消</string>
    <string name="cancel">取消</string>
    <string name="del_del">确认删除此用户</string>
    <string name="del_hint">提示</string>
    <string name="del_nowdel">正在删除用户信息</string>
    <string name="del_ok">删除成功</string>
    <string name="changepas_four">请输入四位数密码</string>
    <string name="changepas_fourtoo">两次输入密码不同,请重新输入</string>
    <string name="change_ok">修改成功</string>
    <string name="use">使用</string>
    <string name="passIsFour">密码长度不能超过4位数</string>
    <string name="passIsUsed">该密码已经有人使用,请重新输入</string>

    <string name="user_fontsize">字体大小</string>
    <string name="user_theme">主题</string>
    <string name="fontsize_big">大</string>
    <string name="fontsize_medium">中</string>
    <string name="fontsize_small">小</string>
    <string name="dialog_fontsize">请选择字体大小:</string>
    <string name="dialog_theme">请选择主题:</string>
    <string name="theme_simple">简约</string>
    <string name="title_language">修改语言</string>
    <string name="title_fontsize">修改字体大小</string>
    <string name="title_theme">修改主题</string>
    <string name="language_chinese">中文</string>
    <string name="language_english">English</string>
    <string name="settingset_title_language">选择语言</string>
    <string name="settingset_title_fontsize">选择字体</string>
    <string name="settingset_title_theme">选择主题</string>

    <!--自定义录像界面-->
    <string name="stop">停止</string>
    <string name="nocamera">未能获取到相机！</string>
    <string name="messageok">留言成功</string>
    <string name="SDcardisxists">请查看您的SD卡是否存在！</string>
    <string name="finish">关闭</string>
    <string name="again">重播</string>
    <string name="photoIsSaved">正在保存...</string>
    <string name="isTheLastOne">已经是最后一个视频了</string>
    <string name="isTheFirstOne">已经是第一个视频了</string>
    <string name="isBuffering">正在缓冲...</string>
    <string name="theBigPicture">查看大图</string>
    <string name="replaceHead">更换头像</string>
    <string name="customVideoText">单击保存留言,长按可取消当前留言</string>

    <string name="ic_arrow_right">&#xe6a7;</string>
    <string name="ic_setting">&#xe77e;</string>
    <string name="ic_goto">&#xe600;</string>
    <string name="ic_send">&#xe68d;</string>
    <string name="ic_not_read">&#xe7e5;</string>
    <string name="ic_save">&#xe62c;</string>
    <string name="ic_back">&#xe60d;</string>
    <string name="ic_lock">&#xe6d1;</string>
    <string name="ic_success">&#xe6c1;</string>
    <string name="ic_setting_language">&#xe647;</string>
    <string name="ic_setting_fontsize">&#xe60c;</string>
    <string name="ic_setting_theme">&#xe87f;</string>
    <string name="ic_video_rebroadcast">&#xe621;</string>
    <string name="ic_video_suspend">&#xe620;</string>
    <string name="ic_video_play">&#xe64e;</string>
    <string name="ic_video_close">&#xe639;</string>
    <string name="ic_video_last">&#xe630;</string>
    <string name="ic_video_next">&#xe601;</string>
    <string name="ic_video_stop">&#xe62e;</string>
    <string name="ic_video_finish">&#xe61b;</string>
    <string name="ic_envelope">&#xe60b;</string>
    <string name="ic_exit">&#xe815;</string>
    <string name="ic_message">&#xe603;</string>
    <string name="ic_list">&#xe6da;</string>
    <string name="ic_photo_back">&#xe67f;</string>
    <string name="ic_circle_hollow">&#xe60f;</string>
    <string name="ic_circle_solid">&#xe69b;</string>
    <string name="ic_circle_background">&#xe602;</string>
    <string name="ic_back_to_back">&#xe642;</string>
    <string name="ic_arrow_down">&#xe604;</string>
    <string name="ic_volume">&#xe608;</string>
    <string name="ic_volume_no">&#xe60a;</string>
    <string name="ic_sun">&#xe606;</string>
    <string name="ic_sound">&#xe6a5;</string>
    <string name="ic_false">&#xe622;</string>
    <string name="ic_plus">&#xe64f;</string>
    <string name="ic_reduce">&#xe675;</string>
    <string name="ic_edit">&#xe624;</string>
    <string name="ic_delete">&#xe62f;</string>
</resources>
