<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        android:text="@string/addpassage"
        style="@style/PasswordTextView" />
    <com.njwyt.view.PasswordInputView
        android:id="@+id/add_pas"
        app:pivBorderColor="#919090"
        app:pivBorderRadius="2dp"
        app:pivBorderWidth="1px"
        app:pivPasswordColor="#000000"
        app:pivPasswordLength="4"
        app:pivPasswordWidth="8dp"
        style="@style/PasswordInputView" />
    <TextView
        android:text="@string/addpassagetoo"
        style="@style/PasswordTextView" />
    <com.njwyt.view.PasswordInputView
        android:id="@+id/add_pas_too"
        app:pivBorderColor="#919090"
        app:pivBorderRadius="2dp"
        app:pivBorderWidth="1px"
        app:pivPasswordColor="#000000"
        app:pivPasswordLength="4"
        app:pivPasswordWidth="8dp"
        style="@style/PasswordInputView" />
    <LinearLayout
        android:layout_margin="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/pas_ok"
            android:layout_weight="1"
            android:background="@drawable/simple_button_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/colorWhite"/>
        <View
            android:layout_width="10dp"
            android:layout_height="0dp"/>
        <Button
            android:id="@+id/pas_off"
            android:layout_weight="1"
            android:background="@drawable/simple_button_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

</LinearLayout>