<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.njwyt.intelligentdoor.SelectionPasswordActivity">

    <com.njwyt.view.CustomActionBar
        android:id="@+id/selection_password_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/newpassage"
        style="@style/PasswordTextView" />
    <com.njwyt.view.PasswordInputView
        android:id="@+id/new_pas"
        app:pivBorderColor="#919090"
        app:pivBorderRadius="2dp"
        app:pivBorderWidth="1px"
        app:pivPasswordColor="#000000"
        app:pivPasswordLength="4"
        app:pivPasswordWidth="8dp"
        android:inputType="numberPassword"
        style="@style/PasswordInputView" />
    <TextView
        android:text="@string/newpassagetoo"
        style="@style/PasswordTextView" />
    <com.njwyt.view.PasswordInputView
        android:id="@+id/new_pas_too"
        app:pivBorderColor="#919090"
        app:pivBorderRadius="2dp"
        app:pivBorderWidth="1px"
        app:pivPasswordColor="#000000"
        app:pivPasswordLength="4"
        app:pivPasswordWidth="8dp"
        style="@style/PasswordInputView" />
    <LinearLayout
        android:layout_margin="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/pas_0ok"
            android:layout_weight="1"
            android:background="@drawable/simple_button_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/colorWhite"/>
        <View
            android:layout_width="10dp"
            android:layout_height="0dp"/>
        <Button
            android:id="@+id/pas_off"
            android:layout_weight="1"
            android:background="@drawable/simple_button_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

</LinearLayout>
